--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,9 @@
 .app.dark {
-    --bg-color: #0d0d61;
+    --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
 
     --primary-color: #049604;
     --secondary-color: #04ff04;
+    --inveted-primary-color: #0232c2;
+    --inveted-secondary-color: #0449e0;
 }
