--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable scss/double-slash-comment-whitespace-inside */
 :root {
     --font-family-main: consolas, "Times New Roman", serif;
     --font-size-m: 16px;
