--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -5,7 +5,8 @@
     padding: 6px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
     padding: 0;
     border: none;
     background: none;
@@ -16,6 +17,10 @@
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
     background: none;
+}
+
+.clearInverted {
+    color: var(--inverted-primary-color);
 }
 
 .backgroundInverted {
