--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -15,8 +15,10 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+
     //zIndex
+
     --modal-z-index: 10;
-    // COlor
-    --overlay-color: rgba(0, 0, 0, 0.6);
+    /* stylelint-disable-next-line alpha-value-notation */
+    --overlay-color: rgb(0 0 0 / 0.6);
 }
