--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,14 +3,14 @@
 @import "themes/dark";
 @import "themes/normal";
 
-body {
-    font: var(--font-m);
-    color: var(--primary-color);
-}
+body {}
 
-.app {
+.app,
+.app_modal {
     min-height: 100vh;
     background: var(--bg-color);
+    font: var(--font-m);
+    color: var(--primary-color);
 }
 
 .content-page {
