--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,8 @@
-.app.dark {
+.app_dark_theme {
     --bg-color: #090949;
     --inverted-bg-color: #e8e8ea;
     --primary-color: #049604;
     --secondary-color: #04ff04;
-    --inveted-primary-color: #0232c2;
+    --inveted-primary-color: #1f7a05;
     --inveted-secondary-color: #0449e0;
 }
