--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -12,6 +12,7 @@
     --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
     //sizes
+    /* stylelint-disable-next-line CssSyntaxError */
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
